gnome-shell (3.26.2-1) UNRELEASED; urgency=medium

  * New upstream release
  * Rebase patches

 -- Michael Biebl <biebl@debian.org>  Sun, 05 Nov 2017 19:15:39 +0100

gnome-shell (3.26.1-3) unstable; urgency=medium

  * Cherry-pick git_popupmenu-icon-via-string.patch:
    - Fix setting icon name via string, used by some extensions
  * Cherry-pick git_spawn-wifi-panel-wpa-enterprise.patch:
    - Launch Wi-Fi Settings not Network panel for WPA Enterprise
  * Set urgency to high to not further delay gjs/mutter transition

 -- Jeremy Bicha <jbicha@debian.org>  Sat, 21 Oct 2017 20:07:37 -0400

gnome-shell (3.26.1-2) unstable; urgency=medium

  [ Jeremy Bicha ]
  * Release to unstable
  * Bump Standards-Version to 4.1.1
  * Cherry-pick git_layout-unset-when-headless.patch from gnome-3-26
    branch to fix crash bug (LP: #1717170)

  [ Andrea Azzarone ]
  * debian/patches/workaround_crasher_fractional_scaling.patch:
    workaround a popular crash for now when fractional scaling is enabled.
    Andrea is working on a proper fix/debug (LP: #1714542)

  [ Didier Roche ]
  * debian/patches/fix_reset_initial_focus.patch:
    - cherry-pick fix proposed by upstream to avoid regression when keyboard
      is used the second time a modal dialog is drawn.

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 13 Oct 2017 16:32:23 -0400

gnome-shell (3.26.1-1) experimental; urgency=medium

  * Team upload
  * New upstream release
    - d/p/000[1-5]*.patch: Drop patches that came from upstream
    - d/p/0006-gtk-embed-stop-watching-for-new-windows-when-icon-is.patch:
      Drop patch for #875609, fixed differently upstream
    - debian/patches/41-handle-logind-fail.patch:
      Drop patch for #729877, fixed differently upstream
    - d/p/run-unit-tests.patch: Drop patch, applied upstream
  * d/p/30-remoteMenu-Prevent-the-shell-from-becoming-unrespons.patch:
    Drop patch for GNOME #686502, fixed differently upstream
    (and was no longer applied anyway)
